main.tf
provider "aws" {
  region = var.region
  #access_key = ""
  #secret_key = ""
}

resource "aws_security_group" "my_sg" {
  name = "My Security Group"
  description = "My Security Group"
  # разрешить ICMP
  ingress {
    from_port   = 8
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # разрешить входящий на 22 - SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # разрешить входящий на 80 - веб-сервер
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # разрешить входящий на 443 - для https - пока без него
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    # разрешить весь исходящий
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

provider "null" {}

resource "null_resource" "output_ip" {
  triggers = {
    instance_id = aws_instance.lamp.id
  }

  provisioner "local-exec" {
    command = "echo 'IP address: ${aws_instance.lamp.public_ip}'"
  }
}

#lamp - имя
resource "aws_instance" "lamp" {
  # AMI - Amazon Machine Image
  ami = var.ami
  instance_type = var.instance_type
  vpc_security_group_ids = [aws_security_group.my_sg.id]
  associate_public_ip_address = true
  tags = {
    Name = "lamp"
  }
  # установить Ansible
  user_data              = <<EOF
#!/bin/bash
sudo apt-get update
sudo apt-get install -y ansible git
git clone https://github.com/YuriyUdod/HelloWorld2.git
cd HelloWorld
ansible-playbook playbook.yml  --extra-vars "mysql_root_password=${var.mysql_root_password}"
EOF

}
